--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "grunt": "~0.4.5",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-less": "~0.11.3",
-    "grunt-autoprefixer": "~0.8.2"
+    "grunt-autoprefixer": "~0.8.2",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-concat": "~0.5.0",
+    "grunt-contrib-uglify": "~0.5.1"
   }
 }
